--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dm-cms",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "description": "my try for a cms",
   "main": "index.js",
   "scripts": {
@@ -23,11 +23,13 @@
   },
   "homepage": "https://github.com/divramod/dm-cms",
   "bin": {
-    "dminstall": "./bin/dm-install"
+    "dmcms": "./bin/dm-cms"
   },
   "dependencies": {
     "co": "^4.5.4",
     "colors": "^1.1.2",
+    "grunt": "^0.4.5",
+    "grunt-bump": "^0.3.1",
     "shelljs": "^0.5.1"
   }
 }
