--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "colors": "^1.1.2",
     "grunt": "^0.4.5",
     "grunt-bump": "^0.3.1",
+    "grunt-git": "^0.3.5",
+    "nodegit": "^0.4.1",
     "shelljs": "^0.5.1"
   }
 }
